# KUI

./: HISTORY.md  HISTORY_EN.md  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: inactive_chat_card_auto_reply_bug.md  inactive_chat_card_missing_data_bug.md  inactive_chat_card_missing_data_bug2.md  inactive_chat_custom_white.md  inactive_chat_page_not_ok.md  inactive_chat_page_not_ok2.md  inactive_chat_stockno.md  inactive_chat_whitepage.md
scripts/: release.sh
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_topic_icon.sql  003_add_user_profiles.sql  004_add_topic_type.sql  005_add_message_interactive.sql
src-tauri/src/: lib.rs  main.rs
src/app/: dragRegion.ts  i18n.ts  init.ts
src/components/: Markdown.tsx  TextAvatar.tsx  Twemoji.tsx  UpdateChecker.tsx
src/constants/: emojiPresets.ts
src/db/: seed.ts  sql.ts
src/db/repos/: agents.ts  links.ts  messages.ts  profiles.ts  providers.ts  settings.ts  tags.ts  topics.ts  users.ts
src/features/agent/: getModel.ts  runAgent.ts  tools.ts
src/features/chat/: ChatView.tsx  DeriveSubTopicModal.tsx  runAgentFlow.ts
src/features/graph/: GraphView.tsx
src/fs/: mdRepo.ts
src/ipc/: index.ts
src/locales/: en-US.json  zh-CN.json
src/stores/: appStore.ts  streamingStore.ts  updaterStore.ts
(+27 files in other folders)
